create github pages

--- a/about-us.html
+++ b/about-us.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/j">website templates</a></section><section class="mbr-section content4 cid-qWPzTGGL3m" id="content4-9">
+<section class="engine"><a href="https://mobiri.se/q">free responsive website templates</a></section><section class="mbr-section content4 cid-qWPzTGGL3m" id="content4-9">
 
     
 
@@ -139,7 +139,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="5kdRygGzNe1qbGPlGD3+sfRfZOSc4s3Lkeh0spqhRbbaDBzyKo9Clc5+6yADZznJM2CIS5iPt7Ygqfi21+WaOEKlhZW6ojGScu47KoJdF3+YIa/2cDkEBqoenVqsLMFq" data-form-email="true">
+                        <input type="hidden" value="KNSZn5Wb7x+/wxNBBmmuY6E4tqAnzJ5pJDeeR2F8Pj3nnbNCw7G6wZki/gsmMlhBtAgwhNS2LeWzKQJ0xSypG8HJ+M7tZr6mFajr0i77v+2oJblC+3ZBbpHhZUZQEZC2" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-16">
                         </div>
