--- a/howdoistartcoding.html
+++ b/howdoistartcoding.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/p">website templates free download</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
+<section class="engine"><a href="https://mobiri.se/l">free website templates</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
 
     
 
@@ -271,7 +271,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="mLpEpU0cT9vNNwYARHTguZSh51IwdFjZKz/QzZHKVeQDHrSGNNC7WyO5iyKJy1vbjr1mW5SbPEl364LQPqTJzLFRJkrgaH4I7P76611GIU6LXwYcTflBk1UWvBxZcJbn" data-form-email="true">
+                        <input type="hidden" value="WJKkwawavqsHbRS+MELn6HMRo6JKEXFSJ6sU3iEPhLOm3NCWECSWjz+Kx5Vq+FsFwyNxLHde5d+SNW7TYYkKyvLeB++7hsWRxiw69ypZVCxICPIVPCLTRNIvXQ283gHy" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-13">
                         </div>
