--- a/page6.html
+++ b/page6.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se">Mobirise</a></section><section class="mbr-section content4 cid-qYsoWOJFRn" id="content4-1m">
+<section class="engine"><a href="https://mobiri.se/e">how to make your own website</a></section><section class="mbr-section content4 cid-qYsoWOJFRn" id="content4-1m">
 
     
 
@@ -155,7 +155,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="t7+ONuwPZyOTD0Nu2/gx7z79y0SI0aBNn+vzd8PUX3vk9oMQrjFfsXBsA9WerA8C39ZultnIqj0+xIug177duHHc3wiVETgKirCftD2Fi2n6Q80uDeMh5oNrw4d3v9x0" data-form-email="true">
+                        <input type="hidden" value="WXRdbQuQyZak9kSl95p6/1Lw3exZLQ8I4rehkF7qrL35XHZdB1v9dDZbxrmkSkXHQ1PO/VhyjFI71NdI6oB/dSZPZei5w66wMSBaxJV5RqFEZKFLe5TOynqWoBxDKeMh" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-1n">
                         </div>
