--- a/howdoistartcoding.html
+++ b/howdoistartcoding.html
@@ -65,16 +65,16 @@ window.smartsupp||(function(d) {
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="about-us.html">
+                    <a class="nav-link link text-white display-4" href="about-us.html" target="_blank">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">Tutorials</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="contact.html"><span class="mbri-success mbr-iconfont mbr-iconfont-btn"></span>Contact</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html" target="_blank">Tutorials</a></li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="contact.html" target="_blank"><span class="mbri-success mbr-iconfont mbr-iconfont-btn"></span>Contact</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/l">free website templates</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
+<section class="engine"><a href="https://mobiri.se/m">website design templates</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
 
     
 
@@ -271,7 +271,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="WJKkwawavqsHbRS+MELn6HMRo6JKEXFSJ6sU3iEPhLOm3NCWECSWjz+Kx5Vq+FsFwyNxLHde5d+SNW7TYYkKyvLeB++7hsWRxiw69ypZVCxICPIVPCLTRNIvXQ283gHy" data-form-email="true">
+                        <input type="hidden" value="OxoG3PohUeQtTU4GNTOj/dwvdSNTSakm829Odz8x9K8e1/BYSiIlGY0Tn7m7Vz3jYF9ahgFOvP9/sU9Neq/Z7cGJ9DLhcZWlw0B/svN6QyfxqzDtToDKwUVOFTpvkU89" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-13">
                         </div>
