--- a/page5.html
+++ b/page5.html
@@ -65,16 +65,16 @@ window.smartsupp||(function(d) {
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="about-us.html">
+                    <a class="nav-link link text-white display-4" href="about-us.html" target="_blank">
                         About Us
                     </a>
-                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html">Tutorials</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="contact.html"><span class="mbri-success mbr-iconfont mbr-iconfont-btn"></span>Contact</a></div>
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page3.html" target="_blank">Tutorials</a></li></ul>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-success display-4" href="contact.html" target="_blank"><span class="mbri-success mbr-iconfont mbr-iconfont-btn"></span>Contact</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make a website</a></section><section class="mbr-section content4 cid-qYny7tSYal" id="content4-1a">
+<section class="engine"><a href="https://mobiri.se/t">amp template</a></section><section class="mbr-section content4 cid-qYny7tSYal" id="content4-1a">
 
     
 
@@ -156,7 +156,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="HAAMKTNtdt9AVczwZmzvD6/bMmso+lWGdV4XZ0GOZAx7Kli+1Zkb8hgx/iXmN74veD21JA9V5g7cn/aWOpScmvcknRhvQIxUEXEcE+KPbETpQBGRfMSiLdmHGFWMvUva" data-form-email="true">
+                        <input type="hidden" value="CbvtU1+j1N7mPsJDwgAZm2YGAfvdZg/fdBXImd6gmBl/dJAh7IbEnrbk13Xo/3TqqxCj1E7x+093bm3lMX2aO4piZBfJXxfynU5cwr+gwb+3cubsfe0+cGgLH5LrnZZd" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-1e">
                         </div>
