--- a/howtoaddahyperlink.html
+++ b/howtoaddahyperlink.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/s">bootstrap themes</a></section><section class="mbr-section content4 cid-qYxiURzLCg" id="content4-1u">
+<section class="engine"><a href="https://mobiri.se/k">develop free website</a></section><section class="mbr-section content4 cid-qYxiURzLCg" id="content4-1u">
 
     
 
@@ -97,13 +97,13 @@ window.smartsupp||(function(d) {
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">For this tutorial, we're going to replace Learn to code on https://forevercoding.com to Click here to go to the ForeverCoding website. 
-<div>
-</div><div>All you have to do is add the below line of code to your existing HTML page. 
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p>For this tutorial, we're going to replace Learn to code on https://forevercoding.com to Click here to go to the ForeverCoding website.</p><p> 
+</p><div>
+</div><div>All you have to do is add the below line of code to your existing HTML page.</div><div><br></div><div> 
 </div><div>
-</div><div>&lt;p&gt; Click &lt;a href="https://forevercoding.com"&gt;here&lt;/a&gt; to go to the ForeverCoding website.  &lt;/p&gt;
+</div><div>&lt;p&gt; Click &lt;a href="https://forevercoding.com"&gt;here&lt;/a&gt; to go to the ForeverCoding website.  &lt;/p&gt;</div><div><br></div><div>
 </div><div>
-</div><div>Now, save your file. &nbsp;</div></div>
+</div><div>Now, save your file. &nbsp;</div><p></p></div>
         </div>
     </div>
 </section>
@@ -146,7 +146,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="GbIovN19U3JovhonkoLpjqtEQs+Hd7gShVvwQUtGRtYvvngs/vwGXyPp52VvlWhDnTWYYZ4igelyTBwL1AOxekV+9naWxQOPQsJ4m5ahmpF36rSQZx+Svsupl5m8LLsF" data-form-email="true">
+                        <input type="hidden" value="Ekda9Hj9tgyqeNM6sAGCq2O+a1Zlwony/5pfKnWWSIfSA5ZuF6ReDsZzVKuldxWTw5NJqwpvea00gt/oZgzonKY2JlfJhP+CHAVt1/t54B4Zpap0e7LBxSMxKqZCqqW/" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-1w">
                         </div>
