--- a/page3.html
+++ b/page3.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/m">free website design templates</a></section><section class="mbr-section content4 cid-qY9OeixS2K" id="content4-d">
+<section class="engine"><a href="https://mobiri.se/d">website maker</a></section><section class="mbr-section content4 cid-qY9OeixS2K" id="content4-d">
 
     
 
@@ -104,7 +104,7 @@ window.smartsupp||(function(d) {
                     How do I start coding?&nbsp;</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="howdoistartcoding.html">View</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="howdoistartcoding.html" target="_blank">View</a></div>
             </div>
         </div>
     </div>
@@ -123,7 +123,7 @@ window.smartsupp||(function(d) {
                     How to add a drop-down menu</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="page6.html">View</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="page6.html" target="_blank">View</a></div>
             </div>
         </div>
     </div>
@@ -142,7 +142,7 @@ window.smartsupp||(function(d) {
                     How to add a image</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="page5.html">View</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="page5.html" target="_blank">View</a></div>
             </div>
         </div>
     </div>
@@ -161,7 +161,7 @@ window.smartsupp||(function(d) {
                     How to add a radio button</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="howtoaddaradiobutton.html">View</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="howtoaddaradiobutton.html" target="_blank">View</a></div>
             </div>
         </div>
     </div>
@@ -180,7 +180,7 @@ window.smartsupp||(function(d) {
                     How to add a hyperlink</h2>
             </div>
             <div class="media-container-column col-12 col-lg-3 col-md-4">
-                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="https://mobirise.com">View</a></div>
+                <div class="mbr-section-btn align-right py-4"><a class="btn btn-success display-4" href="howtoaddahyperlink.html" target="_blank">View</a></div>
             </div>
         </div>
     </div>
@@ -224,7 +224,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out.</div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="rPoOzlTzt59c+PoXRWynIUe+jYLwiJHaC1pTwiZTv4U/YSoJmYb2JCuXzOUKEvE/GL16u3WvAD8yYgt0sppNHJ+Be/Izh+mCImnI5R1uVRKx3i3HfwytSBgWzq4w19C4" data-form-email="true">
+                        <input type="hidden" value="aVjA6/wuX8pQafvco7tJpZemYOb88U66ttfOwm/Ic6hifRdcDJ3p2jFLlyzquuiuTLDd7o7y8ljI60vUDxQ3IMWSa3h9Q1Ooj0+FzGvr6NLrlxkxSdrPe+f36LVwrRwo" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Over here! " id="email-footer3-14">
                         </div>
