--- a/page6.html
+++ b/page6.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/q">free responsive website templates</a></section><section class="mbr-section content4 cid-qYsoWOJFRn" id="content4-1m">
+<section class="engine"><a href="https://mobiri.se/u">bootstrap responsive templates</a></section><section class="mbr-section content4 cid-qYsoWOJFRn" id="content4-1m">
 
     
 
@@ -155,7 +155,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="v9K17ULw96oKY0nxv1ZGUvtzC4fLgbDxboTFMfch46iENwFp4i9DDPH4ark8XPf3ZLBfwuAmmSodoflpRNVtYEWUglJxK8ui0o6Z0c/FYktlJGBuJcJ94ZU54McpNTjt" data-form-email="true">
+                        <input type="hidden" value="dJYlyvibuu5dBJyBF05dxjvvP7X29Fk7I5AmVZvJQzwc12nsm4EdLDU32jnNwAeXsjPc//9sI0agzLkwm11+/VvC18y/LsLuG1klq9dUjhOf1cGdMCcF51/OFdnwiwll" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-1n">
                         </div>
