--- a/howdoistartcoding.html
+++ b/howdoistartcoding.html
@@ -74,7 +74,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/m">website design templates</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
+<section class="engine"><a href="https://mobiri.se/t">amp templates</a></section><section class="mbr-section content4 cid-qY9R4tDNnb" id="content4-k">
 
     
 
@@ -271,7 +271,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="OxoG3PohUeQtTU4GNTOj/dwvdSNTSakm829Odz8x9K8e1/BYSiIlGY0Tn7m7Vz3jYF9ahgFOvP9/sU9Neq/Z7cGJ9DLhcZWlw0B/svN6QyfxqzDtToDKwUVOFTpvkU89" data-form-email="true">
+                        <input type="hidden" value="LzbFvY5WC0jqy60MyXwrMLAlKehDfCc/cib1W7uV1rt+7Iab8UF7jgsAqN+No9yYfbOcNtSt5FvPHlukmb3b7nw4v89v9Cio95kuGpv7GQBg9zocKIbX7wfhzu2uJApo" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-13">
                         </div>
