--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@ window.smartsupp||(function(d) {
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/e">make your own site for free</a></section><section class="mbr-section content4 cid-qWG2nCcR52" id="content4-3">
+<section class="engine"><a href="https://mobiri.se/s">free bootstrap themes</a></section><section class="mbr-section content4 cid-qWG2nCcR52" id="content4-3">
 
     
 
@@ -219,7 +219,7 @@ window.smartsupp||(function(d) {
                     <div data-form-alert="" hidden="" class="align-center">Your email has gone to our Newsletter team who will add you to the list. FCoding out. </div>
 
                     <form class="form-inline" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form">
-                        <input type="hidden" value="plr/VxJHoL7i94oRYaLqCq5YaGju94dmyQFUoX1ZRO8uO+JTQxE/brMND9oJLieCeeyA9h62STSM4bCAYUTbPjtJN8sErxAj4zg0+jzeYOu7lFBcKed6BgQT9x0/iO6q" data-form-email="true">
+                        <input type="hidden" value="d5Zc/FyvillxseEYLFoL0mMzNejriJvFMBhx7bHbCzr/HFwLpK3ncZf50SBw0ntk56ebrW6oU3PdCqnH1K2FVrEdLUBZxT47zW3dUK8mAE1QTQpD5I3s+Sf33aRrX4P3" data-form-email="true">
                         <div class="form-group">
                             <input type="email" class="form-control input-sm input-inverse my-2" name="email" required="" data-form-field="Email" placeholder="Email address here, kiddo." id="email-footer3-15">
                         </div>
