--- a/howtoaddaradiobutton.html
+++ b/howtoaddaradiobutton.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html >
 <head>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9000691988568570",
+    enable_page_level_ads: true
+  });
+</script>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
