--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/cookie-bar/cookiebar-latest.min.js?theme=flying&thirdparty=1&always=1&noGeoIp=1&scrolling=1&showNoConsent=1&hideDetailsBtn=1&blocking=1&remember=30&privacyPage=https%3A%2F%2Fprivacy.forevercoding.com"></script>
   <!-- Site made with Mobirise Website Builder v4.8.1, https://mobirise.com -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
