--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
 <body>
 
 <!-- Google Analytics -->
-<script>
-  window.intercomSettings = {
-    app_id: "lxn3taix"
-  };
-</script>
-<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/lxn3taix';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+<div class="pubble-app" data-app-id="47668" data-app-identifier="47668"></div>
+<script type="text/javascript" src="https://cdn.pubble.io/javascript/loader.js" defer></script>
 <!-- /Google Analytics -->
 
 
