--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
+  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0295ea56-efa7-412a-a3ad-1f51a9890ae0" type="text/javascript" async></script>
   
 </head>
 <body>
