--- a/index.html
+++ b/index.html
@@ -20,7 +20,25 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="0295ea56-efa7-412a-a3ad-1f51a9890ae0" type="text/javascript" async></script>
-  
+ 
+  <!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="207221979843336"
+  theme_color="#fa3c4c"
+  logged_in_greeting="Welcome to ForeverCoding. Here 24/7. Your current wait time is under 2 minutes. "
+  logged_out_greeting="Welcome to ForeverCoding. Here 24/7. Your current wait time is under 2 minutes. ">
+</div>
 </head>
 <body>
 
